Added RecyclerView and created custom CardView

--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -7,4 +7,16 @@
         android:layout_height="match_parent"
         tools:context=".activities.HomePageActivity">
 
+    <android.support.v7.widget.RecyclerView
+            android:id="@+id/random_person_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginStart="@dimen/home_page_list_padding"
+            android:layout_marginTop="@dimen/home_page_list_padding"
+            android:layout_marginEnd="@dimen/home_page_list_padding"
+            android:layout_marginBottom="@dimen/home_page_list_padding"/>
 </android.support.constraint.ConstraintLayout>
