--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- Application -->
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
@@ -8,4 +9,7 @@
     <color name="colorSplashScreenBackgroundStart">#e0e0e0</color>
     <color name="colorSplashScreenBackgroundEnd">#ffffff</color>
     <color name="colorSplashScreenNavigationBar">#ffffff</color>
+
+    <!--	Home page	-->
+    <color name="colorHomePageCardNameBackground">#30000000</color>
 </resources>
