--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,8 +5,10 @@
     <dimen name="splash_screen_background_radius">180dp</dimen>
 
     <!--	Home page	-->
-    <dimen name="home_page_list_padding">16dp</dimen>
+    <dimen name="home_page_list_padding">0dp</dimen>
+    <dimen name="home_page_card_height">200dp</dimen>
     <dimen name="home_page_card_elevation">3dp</dimen>
-    <dimen name="home_page_card_radius">4dp</dimen>
-    <dimen name="home_page_card_horizontal_padding">8dp</dimen>
+    <dimen name="home_page_card_radius">8dp</dimen>
+    <dimen name="home_page_card_padding">8dp</dimen>
+    <dimen name="home_page_card_name_size">16sp</dimen>
 </resources>
