--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -1,22 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<layout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".activities.HomePageActivity">
+        xmlns:tools="http://schemas.android.com/tools">
 
-    <android.support.v7.widget.RecyclerView
-            android:id="@+id/random_person_recycler_view"
+    <data>
+        <variable name="homePageViewModel" type="com.example.cpu150.randomusers.viewmodels.HomePageViewModel"/>
+    </data>
+
+    <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginStart="@dimen/home_page_list_padding"
-            android:layout_marginTop="@dimen/home_page_list_padding"
-            android:layout_marginEnd="@dimen/home_page_list_padding"
-            android:layout_marginBottom="@dimen/home_page_list_padding"/>
-</android.support.constraint.ConstraintLayout>
+            tools:context=".activities.HomePageActivity">
+
+        <android.support.v7.widget.RecyclerView
+                android:id="@+id/random_person_recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginStart="@dimen/home_page_list_padding"
+                android:layout_marginTop="@dimen/home_page_list_padding"
+                android:layout_marginEnd="@dimen/home_page_list_padding"
+                android:layout_marginBottom="@dimen/home_page_list_padding"/>
+    </android.support.constraint.ConstraintLayout>
+</layout>
