Switched to AndroidX

--- a/app/src/main/res/layout/card_view_home_page.xml
+++ b/app/src/main/res/layout/card_view_home_page.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="@dimen/home_page_card_height"
             app:layout_constraintTop_toTopOf="parent"
@@ -40,5 +40,5 @@
                 android:textColor="@color/colorHomePageCardNameText"
                 android:layout_gravity="bottom"
                 android:background="@color/colorHomePageCardNameBackground"/>
-    </android.support.v7.widget.CardView>
-</android.support.constraint.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+</androidx.constraintlayout.widget.ConstraintLayout>
