--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -8,12 +8,12 @@
         <variable name="homePageViewModel" type="com.example.cpu150.randomusers.viewmodels.HomePageViewModel"/>
     </data>
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".activities.HomePageActivity">
 
-        <android.support.v7.widget.RecyclerView
+        <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/random_person_recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -25,5 +25,5 @@
                 android:layout_marginTop="@dimen/home_page_list_padding"
                 android:layout_marginEnd="@dimen/home_page_list_padding"
                 android:layout_marginBottom="@dimen/home_page_list_padding"/>
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
