--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -21,6 +21,9 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:hasFixedSize="@{Boolean.valueOf(true)}"
+                app:layoutManager="@{homePageViewModel.layoutManager}"
+                app:adapter="@{homePageViewModel.listAdapter}"
                 android:layout_marginStart="@dimen/home_page_list_padding"
                 android:layout_marginTop="@dimen/home_page_list_padding"
                 android:layout_marginEnd="@dimen/home_page_list_padding"
